--- a/MCR/readme
+++ b/MCR/readme
@@ -1,1 +1,4 @@
-Part of the implementation for the paper "Further Optimizations of CSIDH: A SystematicApproach to Efficient Strategies, Permutations,and Bound Vectors"
+implementation accompanying the paper "On Lions and Elligators: An efficient constant-time implementation of CSIDH"
+
+based on the implementation accompanying the original CSIDH paper by Castryck, Lange, Martindale, Panny, Renes:
+https://eprint.iacr.org/2018/383
