--- a/MCR/readme
+++ b/MCR/readme
@@ -1,4 +1,3 @@
-implementation accompanying the paper "On Lions and Elligators: An efficient constant-time implementation of CSIDH"
+Part of the implementation for the paper "Further Optimizations of CSIDH: A SystematicApproach to Efficient Strategies, Permutations,and Bound Vectors". This code was build on top of that of Meyer, Campos, and Reith given in the paper "On Lions and Elligators: An efficient constant-time implementation of CSIDH"
 
-based on the implementation accompanying the original CSIDH paper by Castryck, Lange, Martindale, Panny, Renes:
-https://eprint.iacr.org/2018/383
+The code is compatible with any collection of valid strategies, permutations, and bound vectors. Write them into "Sage-GenCode.sage" and compile that file with Sage. This will create (update) the "csidh.c" file which performs the group action. Run Make and execute.
